<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    tools:context="com.example.lenovo.moviedb3.MovieDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <ImageView
                        android:id="@+id/imageview_poster"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/poster"
                        android:src="@mipmap/ic_launcher"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp">


                        <TextView
                            android:id="@+id/tv_originalTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/original_value"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/original_rating"
                            android:textSize="15sp"
                            android:textStyle="italic" />
                        <ImageView
                            android:id="@+id/id_fav"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="7dp"
                            android:contentDescription="@string/favourite_button"
                            android:src="@drawable/ic_favorite_border_black_24dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>
                </LinearLayout>
               <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailer_s"
                android:textSize="17sp"
                android:textStyle="bold"
                   android:id="@+id/id_collapse_trailer"
                android:textColor="@color/black"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/id_rv_trailer">

                </android.support.v7.widget.RecyclerView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_s"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:id="@+id/id_collapse_comment"
                    android:textColor="@color/black"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_rv_review">

                </android.support.v7.widget.RecyclerView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/plot_synopsis"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_overView"
                    android:text="@string/original_text"
                    android:textStyle="italic"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_date"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/imageview_backdrop"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"
            android:contentDescription="@string/backdrop"
            android:paddingBottom="16dp"/>
    </LinearLayout>
</ScrollView>